# renovate-rust

./: .gitignore  AGENTS.md  BRANCHING.md  CLAUDE.md  COMMITS.md  Cargo.toml  PARITY_AUDIT.md  README.md  clippy.toml  deny.toml  find_full.py  tmp_find_missing.py  update_ledger.py  verify_parity.py
crates/parity-cli/: Cargo.toml
crates/parity-cli/src/: main.rs  optout.rs  paths.rs  source.rs  test_map.rs
crates/renovate-cli/: Cargo.toml
crates/renovate-cli/src/: cli.rs  config_builder.rs  config_codespaces.rs  config_env.rs  context.rs  lib.rs  logging.rs  main.rs  managers_impl.rs  migrate.rs  output.rs  pipeline_utils.rs  pipelines.rs  report_builders.rs
crates/renovate-cli/src/pipelines/: ansible.rs  batect.rs  bazel.rs  ci.rs  cnb.rs  conan.rs  copier.rs  cpanfile.rs  custom_managers.rs  dart.rs  docker.rs  dotnet.rs  git.rs  go.rs  haskell.rs  helm.rs  heroku.rs  homebrew.rs  javascript.rs  jenkins.rs  jvm.rs  kubernetes.rs  misc.rs  mobile.rs  nix.rs  php.rs  pre_commit.rs  puppet.rs  python.rs  ruby.rs  rust.rs  terraform.rs  typst.rs  vendir.rs  version_files.rs
crates/renovate-cli/tests/: cli.rs  parity.rs
crates/renovate-core/: Cargo.toml
crates/renovate-core/src/: artifacts.rs  branch.rs  cache.rs  config.rs  datasources.rs  exec.rs  extractors.rs  fs.rs  git.rs  http.rs  json_writer.rs  lib.rs  limits.rs  managers.rs  merge_confidence.rs  monorepos.rs  onboarding.rs  package_rule.rs  platform.rs  platform_constants.rs  proxy.rs  replacements.rs  repo_config.rs  schedule.rs  string_match.rs  timestamp.rs  util.rs  versioning.rs  vulnerability.rs  workers.rs
crates/renovate-core/src/cache/: memory.rs  package.rs
crates/renovate-core/src/config/: decrypt.rs  file.rs  host_rules_from_env.rs  inherit.rs  massage.rs  migrate_validate.rs  migration.rs  platform.rs  presets.rs  run.rs  schema.rs  secrets.rs  utils.rs  validation_helpers.rs
crates/renovate-core/src/config/decrypt/: bcpgp.rs  mod.rs  openpgp.rs
crates/renovate-core/src/config/migration/: migrations.rs  mod.rs
crates/renovate-core/src/config/presets/: common.rs  gitea.rs  github.rs  gitlab.rs  http.rs  index.rs  internal.rs  local.rs  npm.rs  parse.rs  util.rs
crates/renovate-core/src/config/validation_helpers/: match_base_branches.rs  regex_glob_matchers.rs  types.rs  utils.rs
crates/renovate-core/src/datasources/: artifactory.rs  aws_eks_addon.rs  aws_machine_image.rs  aws_rds.rs  azure_bicep.rs  azure_pipelines_tasks.rs  azure_tags.rs  bazel.rs  bitbucket_server_tags.rs  bitbucket_tags.rs  bitrise.rs  buildpacks_registry.rs  cdnjs.rs  clojure.rs  cocoapods.rs  conan.rs  conda.rs  cpan.rs  crates_io.rs  custom.rs  dart_version.rs  deb.rs  deb_index.rs  deno.rs  devbox.rs  docker_ecr.rs  docker_google.rs  docker_hub.rs  dotnet_version.rs  elm_package.rs  endoflife.rs  flutter_version.rs  forgejo_releases.rs  forgejo_tags.rs  galaxy.rs  galaxy_collection.rs  git_refs.rs  git_tags.rs  gitea_releases.rs  gitea_tags.rs  (+49 more)
crates/renovate-core/src/datasources/custom/: formats.rs  mod.rs
crates/renovate-core/src/exec/: containerbase.rs  docker.rs  env.rs  error.rs  hermit.rs  orchestrator.rs  raw.rs  tool_settings.rs  types.rs
crates/renovate-core/src/extractors/: ansible.rs  ansible_galaxy.rs  ant.rs  argocd.rs  asdf.rs  azure_pipelines.rs  batect.rs  batect_wrapper.rs  bazel.rs  bazel_module.rs  bazel_parser.rs  bazelisk.rs  bicep.rs  bitbucket_pipelines.rs  bitrise.rs  buildkite.rs  buildpacks.rs  bun_version.rs  bundler.rs  bundler_artifact_runner.rs  cabal.rs  cake.rs  cargo.rs  cargo_artifact_runner.rs  cdnurl.rs  circleci.rs  cloudbuild.rs  cocoapods.rs  composer.rs  conan.rs  copier.rs  cpanfile.rs  crossplane.rs  crow.rs  deno.rs  deps_edn.rs  devbox.rs  devcontainer.rs  docker_compose.rs  dockerfile.rs  (+79 more)
crates/renovate-core/src/extractors/custom/: jsonata.rs  mod.rs  regex.rs
crates/renovate-core/src/extractors/npm_post_update/: artifact_runner.rs  mod.rs  node_version.rs  npm.rs  pnpm.rs  utils.rs  yarn.rs
crates/renovate-core/src/git/: author.rs  storage.rs
crates/renovate-core/src/http/: host_rules.rs  rate_limits.rs  throttle.rs
crates/renovate-core/src/platform/: azure.rs  azure_utils.rs  bitbucket.rs  bitbucket_server.rs  comment.rs  default_scm.rs  forgejo.rs  gerrit.rs  gitea.rs  gitea_forgejo_utils.rs  github.rs  github_api_cache.rs  gitlab.rs  local.rs  pr_body.rs  scm.rs  scm_manager.rs  util.rs
crates/renovate-core/src/util/: array.rs  clone.rs  date.rs  emoji.rs  git.rs  hash.rs  host_rules.rs  interpolator.rs  jsonata.rs  markdown.rs  memoize.rs  minimatch.rs  mutex.rs  number.rs  object.rs  package_rules.rs  promises.rs  range.rs  regex.rs  result.rs  sample.rs  sanitize.rs  split.rs  stats.rs  stringify.rs  unicode.rs  uniq.rs  url.rs
crates/renovate-core/src/util/cache/: package.rs  repository.rs
crates/renovate-core/src/util/git/: auth.rs  config.rs  errors.rs  semantic.rs  url.rs
crates/renovate-core/src/util/package_rules/: current_value.rs  dep_names.rs  files.rs  index.rs  registryurls.rs  sourceurls.rs
crates/renovate-core/src/util/template/: index.rs  mod.rs
crates/renovate-core/src/versioning/: apk.rs  aws_eks_addon.rs  aws_machine_image.rs  azure_rest_api.rs  bazel_module.rs  cargo.rs  composer.rs  conan.rs  conda.rs  deb.rs  debian.rs  deno.rs  devbox.rs  distro.rs  docker.rs  elm.rs  exact.rs  git.rs  github_actions.rs  glasskube.rs  go_mod_directive.rs  gradle.rs  hashicorp.rs  helm.rs  hermit.rs  hex.rs  ivy.rs  kubernetes_api.rs  lambda_node.rs  loose.rs  maven.rs  nixpkgs.rs  node.rs  npm.rs  nuget.rs  pep440.rs  perl.rs  poetry.rs  pvp.rs  python.rs  (+15 more)
crates/renovate-core/src/versioning/bazel_module/: bzlmod_version.rs  mod.rs
crates/renovate-core/src/workers/: global.rs  mod.rs  repository.rs  types.rs
crates/renovate-core/src/workers/global/: autodiscover.rs  index.rs  initialize.rs
crates/renovate-core/src/workers/repository/: cache.rs  changelog.rs  common.rs  configured.rs  dependency_dashboard.rs  error_config.rs  errors_warnings.rs  extract.rs  finalize.rs  index.rs  mod.rs  onboarding.rs  package_files.rs  (+3 more)
(+2391 files in other folders)
