[workspace]
members = ["crates/renovate-cli", "crates/renovate-core"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-only"
repository = "https://github.com/donbeave/renovate-rust"
authors = ["renovate-rust contributors"]

[workspace.dependencies]
renovate-core = { path = "crates/renovate-core", version = "0.0.0" }

# Runtime
clap = { version = "4.6.1", features = ["derive", "env", "wrap_help"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
json5 = "1.3.1"
base64 = "0.22.1"
brotli = "8.0.0"
regex = "1.12.3"
pep440_rs = "0.7.3"
semver = "1.0.28"
toml = "1.1.2"
serde_yaml = "0.9.34"
quick-xml = "0.39.2"
globset = "0.4.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "fs", "sync", "io-util"] }
rand = "0.9"
reqwest = { version = "0.13.3", features = ["json"] }
url = "2.5.8"
hcl-rs = "0.18.0"
flate2 = "1.1"

# Dev / test
assert_cmd = "2.2.1"
predicates = "3.1.4"
tempfile = "3.27.0"
wiremock = "0.6.5"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Default deny set; selected intentionally rather than enabling whole groups.
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
mod_module_files = "warn"
needless_pass_by_value = "warn"
manual_let_else = "warn"
match_wildcard_for_single_variants = "warn"
redundant_clone = "warn"
inefficient_to_string = "warn"
str_to_string = "warn"
implicit_clone = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
needless_collect = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"
panic = "abort"

[profile.dev]
debug = "line-tables-only"
