[package]
name = "parity-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
walkdir = "2.5"

[lints]
workspace = true
