[package]
name = "renovate-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Renovate-compatible dependency update CLI, written in Rust."
publish = false

[[bin]]
name = "renovate"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
renovate-core.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
