[package]
name = "renovate-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core domain types for the renovate Rust implementation."
publish = false

[lints]
workspace = true

[dependencies]
base64.workspace = true
regex.workspace = true
semver.workspace = true
toml.workspace = true
quick-xml.workspace = true
globset.workspace = true
serde.workspace = true
tracing.workspace = true
serde_json.workspace = true
json5.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true
chrono = "0.4.44"

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
