[package]
name = "renovate-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core domain types for the renovate Rust implementation."
publish = false

[lints]
workspace = true

[dependencies]
base64.workspace = true
brotli.workspace = true
regex.workspace = true
pep440_rs.workspace = true
semver.workspace = true
toml.workspace = true
serde_yaml.workspace = true
quick-xml.workspace = true
globset.workspace = true
serde.workspace = true
tracing.workspace = true
serde_json.workspace = true
json5.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["process"] }
url.workspace = true
chrono = "0.4.44"
chrono-tz = "0.10.4"
sha2 = "0.11.0"
hcl-rs.workspace = true
flate2.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
